--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,59 @@
+.parent-title {
+  background: #fa8072;
+  display: flex;
+  height: 40%;
+  h1 {
+    margin: auto;
+    color: white;
+    font-family: "Ranga", cursive;
+    font-size: 40px;
+  }
+}
 
+.container-title {
+  width: 90%;
+  height: 20%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 10%;
+  border: 1px solid white;
+  border-radius: 4%;
+}
+
+.parent-form {
+  background: #fa8072;
+  display: flex;
+  height: 60%;
+}
+
+.child-form {
+  width: 90%;
+  height: 60%;
+  margin: auto;
+  border-radius: 4%;
+  -webkit-box-shadow: 7px 7px 8px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 7px 7px 8px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 7px 7px 8px -1px rgba(0, 0, 0, 0.75);
+}
+
+.hydrated {
+  width: 90%;
+  border-radius: 4%;
+  margin: auto;
+}
+
+.container-form {
+  margin-top: 10%;
+}
+
+.button-full {
+  margin-top: 10%;
+}
+
+.mb-3 {
+  margin-bottom: 3%;
+}
+
+ion-item {
+  border-radius: 8%;
+}
