--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,6 +22,7 @@
         </ion-row>
         <ion-row>
           <ion-button type="submit" color="danger" expand="full" shape="round">Iniciar sesión</ion-button>
+          <p class="enlace-registro" routerLink="/register"><strong> ¿No tienes cuenta? ¡Regístrate ya!</strong> </p>
         </ion-row>
       </form>
     </div>
