--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,4 @@
 .parent-title {
-  background: #fa8072;
   display: flex;
   height: 40%;
   h1 {
@@ -21,7 +20,6 @@
 }
 
 .parent-form {
-  background: #fa8072;
   display: flex;
   height: 60%;
 }
@@ -48,6 +46,7 @@
 
 .button-full {
   margin-top: 10%;
+  margin-bottom: 5%;
 }
 
 .mb-3 {
@@ -56,4 +55,11 @@
 
 ion-item {
   border-radius: 8%;
+}
+
+.enlace-registro {
+  font-size: 0.8rem;
+  color: white;
+  margin: auto;
+  text-decoration: none;
 }
