Detalles noticia, hacer consultas por categoría. Falta botón para cerrar sesión, optimizar la transición entre página de login y de registro, cargar comentarios por noticia y formulario para crear comentarios.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,6 @@
 <div class="parent-title">
   <h1>Spica App</h1>
+  <img src="assets/icon/icon.png">
 </div>
 
 <div class="parent-form">
@@ -22,6 +23,7 @@
         </ion-row>
         <ion-row>
           <ion-button type="submit" color="danger" expand="full" shape="round">Iniciar sesión</ion-button>
+          <p class="enlace-registro" routerLink="/register"><strong> ¿No tienes cuenta? ¡Regístrate ya!</strong> </p>
         </ion-row>
       </form>
     </div>
