--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,4 @@
 .parent-title {
-  background: #fa8072;
   display: flex;
   height: 40%;
   h1 {
@@ -7,6 +6,14 @@
     color: white;
     font-family: "Ranga", cursive;
     font-size: 40px;
+
+    display: block;
+  }
+  img {
+    margin: auto;
+    height: 40%;
+    width: 30%;
+    display: block;
   }
 }
 
@@ -21,7 +28,6 @@
 }
 
 .parent-form {
-  background: #fa8072;
   display: flex;
   height: 60%;
 }
@@ -56,4 +62,12 @@
 
 ion-item {
   border-radius: 8%;
+}
+
+.enlace-registro {
+  font-size: 0.8rem;
+  color: white;
+  margin: auto;
+  margin-top: 10px;
+  text-decoration: none;
 }
