--- a/src/app/noticias/noticias.page.html
+++ b/src/app/noticias/noticias.page.html
@@ -1,18 +1,46 @@
 <ion-toolbar>
   <ion-title style="text-align: center; margin: auto;">Noticias</ion-title>
-  <ion-button color="danger" slot="end" (click)="presentPopover()" style="margin-right: 3%;">
+  <ion-button color="danger" slot="end" (click)="openFirst()" style="margin-right: 3%;">
     Categorias
   </ion-button>
 </ion-toolbar>
-<ion-content>
-  <ion-card *ngFor="let noticia of noticias; let i = index">
+<ion-content id="first">
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles"
+      refreshingText="Cargando todas las noticias...">
+    </ion-refresher-content>
+  </ion-refresher>
+  <ion-card *ngFor="let noticia of noticias; let i = index" routerLink="/detallenoticia/{{noticia.id}}"
+    (click)="seleccionarNoticia(noticia)">
     <img src="{{global.URL_IMG_NOTICIAS}}{{noticia.id}}/{{noticia.image}}" height="270px">
     <ion-card-header>
       <ion-card-subtitle>Autor: {{noticia.Usuario.nombre}}</ion-card-subtitle>
       <ion-card-title>{{noticia.titular}}</ion-card-title>
     </ion-card-header>
-
-    <ion-card-content text-wrap [innerHTML]="this._sanitizer.bypassSecurityTrustHtml(noticia.contenido)">
-    </ion-card-content>
   </ion-card>
+
 </ion-content>
+
+<ion-content id="first" *ngIf="noticias === null">
+  <p class="ion-text-center">No hay noticias actualmente.</p>
+</ion-content>
+
+
+<ion-menu side="start" menuId="first" contentId="first">
+  <ion-header>
+    <ion-toolbar color="danger">
+      <ion-title>Categorías</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list *ngFor="let categoria of categorias; let i = index">
+      <ion-item (click)="cargarNoticiasPorCategoria(categoria.id)">
+        <ion-avatar slot="start">
+          <img src="{{global.URL_IMG_CATEGORIAS}}{{categoria.id}}/{{categoria.image}}">
+        </ion-avatar>
+        <ion-label>{{categoria.nombre}}</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
