--- a/src/app/noticias/noticias.page.html
+++ b/src/app/noticias/noticias.page.html
@@ -1,13 +1,13 @@
 <ion-toolbar>
   <ion-title style="text-align: center; margin: auto;">Noticias</ion-title>
-  <ion-button color="danger" slot="end" (click)="openFirst()" style="margin-right: 3%;">
+  <ion-button color="danger" slot="end" (click)="openFirst()" style="margin-right: 3%; margin-bottom: 2px solid grey;">
     Categorias
   </ion-button>
 </ion-toolbar>
 <ion-content id="first">
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles"
+    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Desliza para refrescar" refreshingSpinner="circles"
       refreshingText="Cargando todas las noticias...">
     </ion-refresher-content>
   </ion-refresher>
@@ -30,10 +30,45 @@
 <ion-menu side="start" menuId="first" contentId="first">
   <ion-header>
     <ion-toolbar color="danger">
-      <ion-title>Categorías</ion-title>
+      <ion-title>Menú</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
+
+    <ion-item-divider>
+      <ion-label>
+        Cuenta
+      </ion-label>
+    </ion-item-divider>
+
+    <ion-list>
+
+      <ion-item>
+        <ion-avatar slot="start">
+          <img src="{{global.URL_IMG_USUARIOS}}{{usuarioLogged.id}}/{{usuarioLogged.image}}">
+        </ion-avatar>
+        <ion-label>
+          {{usuarioLogged.nick}}
+        </ion-label>
+      </ion-item>
+
+      <ion-item (click)="onLogout()">
+        <ion-avatar slot="start">
+          <ion-icon name="power" size="large"></ion-icon>
+        </ion-avatar>
+        <ion-label>
+          Cerrar Sesión
+        </ion-label>
+      </ion-item>
+
+    </ion-list>
+
+    <ion-item-divider>
+      <ion-label>
+        Categorías
+      </ion-label>
+    </ion-item-divider>
+
     <ion-list *ngFor="let categoria of categorias; let i = index">
       <ion-item (click)="cargarNoticiasPorCategoria(categoria.id)">
         <ion-avatar slot="start">
@@ -42,5 +77,6 @@
         <ion-label>{{categoria.nombre}}</ion-label>
       </ion-item>
     </ion-list>
+
   </ion-content>
 </ion-menu>
